[package]
name = "raytracerinoneweekend"
version = "0.1.0"
authors = ["Danil Kondratiev <knightpp@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rayon = "1.3"

[profile.release]
panic = "abort"
lto = "fat"